add transition ract router

--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@craco/craco": "^6.1.1",
     "antd": "^4.14.1",
     "axios": "^0.21.1",
-    "lodash": "^4.17.21",
     "craco-less": "^1.17.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-countdown-circle-timer": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
