--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@types/dotenv": "^8.2.0",
     "antd": "^4.14.1",
     "axios": "^0.21.1",
     "craco-less": "^1.17.1",
